# figma-style-exporter

./: .travis.yml  Cargo.toml  LICENSE  README.md
.circleci/: config.yml
src/: design.rs  figma.rs  lib.rs  main.rs
src/exporter/: design.rs  mod.rs
src/figma/: figma.rs  mod.rs
templates/swift/: ColorStyle.swift  TextStyle.swift
