[package]
name = "figma-style-exporter"
version = "0.1.0"
authors = ["Yu Tawata <tawata-yu@dmm.com>"]
edition = "2018"

[dependencies]
reqwest = "0.9.11"
serde = { version = "1.0.89", features = ["derive"] }
serde_json = "1.0.39"
itertools = "0.8.0"
log = "0.4.6"
env_logger = "0.6.1"
failure = "0.1.5"
tera = "0.11.20"
clap = "2.32.0"
Inflector = "0.11.4"
